# redtape

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  docker-compose.yml  pyproject.toml  whitelist.py
.github/workflows/: test.yml
.scratch/auth-methods/issues/: 01-iam-credentials.md  02-dsn-shorthand.md
.scratch/bugs/issues/: 01-connection-per-statement.md  03-sha256-password-serialisation.md  04-password-validate-fstring.md  05-check-users-groups-success-flag.md  06-user-validate-skips-password.md  07-group-repr-crash.md  08-filter-database-objects-unused.md  09-filter-operations-identity-check.md  10-create-drop-asymmetric-filter.md  11-no-transactional-rollback.md  12-five-connection-roundtrips.md
.scratch/bugs/issues/done/: 02-build-grant-query-nameerror.md
.scratch/code-quality/issues/: 01-remove-add-method-monkey-patching.md  02-connection-pooling.md  03-consolidate-spec-loading-connection.md  04-rename-current-to-actual.md
.scratch/default-privileges/issues/: 01-alter-default-privileges.md
.scratch/modular-specs/issues/: 01-include-directive.md
.scratch/ownership-enforcement/issues/: 01-ownership.md
.scratch/postgres-support/issues/: 01-postgres-connector.md
.scratch/privilege-abstraction/issues/: 01-read-write-shorthand.md
.scratch/redshift-specific/issues/: 01-assumerole.md  02-external-schema-permissions.md  03-sys-role-grants.md
.scratch/role-support/issues/: 01-redshift-rbac-roles.md  02-role-spec-format.md  03-role-model-and-validation.md  04-export-roles.md  05-role-operations.md  06-integration-test.md
.scratch/testing/issues/: 01-ci-integration-tests.md  02-unit-tests-admin.md  03-unit-tests-cli.md  04-unit-tests-specification.md
.scratch/tooling/issues/: 01-ruff-migration.md  02-mypy-hardening.md  03-vulture-dead-code.md  04-update-pre-commit-hooks.md
.scratch/tooling/issues/done/: 00-remove-poetry.md
.scratch/wildcard-coverage/issues/: 01-wildcard-gaps.md
docs/adr/: 0001-multi-database-via-connector-abstraction.md  0002-code-quality-toolchain.md
docs/agents/: domain.md  issue-tracker.md
examples/: spec.yaml
ralph/: Dockerfile  README.md  afk.sh  config.sh  once.sh  prompt.md
redtape/: admin.py  cli.py  connectors.py
redtape/specification/: __init__.py  models.py
tests/: test_admin.py  test_cli.py  test_connectors.py  test_specification.py
tests/integration/: conftest.py  test_export.py  test_run.py
