[project]
name = "redtape-py"
version = "0.4.2"
description = "A permission management tool for AWS Redshift."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6.0",
    "rich>=13.7",
    "psycopg2-binary>=2.9.3",
    "typer>=0.9",
    "attrs>=23.2",
    "cattrs>=23.2",
    "environ-config>=23.2",
    "aenum>=3.1",
]

[project.scripts]
redtape = "redtape.cli:main"

# Exposed as a pip "extra" so `pip install -e ".[dev]"` works (used by ralph
# inside Docker). Mirrored by the [dependency-groups] table below, which is
# what `uv sync --group dev` reads.
[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-cov>=4.1",
    "black>=24.3",
    "flake8>=7.0",
    "isort>=5.13",
    "mypy>=1.9",
    "pre-commit>=3.6",
]

[dependency-groups]
dev = [
    "pytest>=8.1",
    "pytest-cov>=4.1",
    "black>=24.3",
    "flake8>=7.0",
    "isort>=5.13",
    "mypy>=1.9",
    "pre-commit>=3.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["redtape"]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
py_version = 38
profile = "black"
line_length = 88

[tool.pytest.ini_options]
markers = [
    "integration: requires a running Redshift-compatible database (skipped by default)",
]

[tool.mypy]
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
