[project]
name = "redtape-py"
version = "0.4.2"
description = "A permission management tool for AWS Redshift."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6.0",
    "rich>=13.7",
    "psycopg2-binary>=2.9.3",
    "typer>=0.9",
    "attrs>=23.2",
    "cattrs>=23.2",
    "environ-config>=23.2",
    "aenum>=3.1",
]

[project.scripts]
redtape = "redtape.cli:main"

# Exposed as a pip "extra" so `pip install -e ".[dev]"` works (used by ralph
# inside Docker). Mirrored by the [dependency-groups] table below, which is
# what `uv sync --group dev` reads.
[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.6",
    "vulture>=2.11",
]

[dependency-groups]
dev = [
    "pytest>=8.1",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.6",
    "vulture>=2.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["redtape"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "N", "UP", "S", "SIM", "RUF"]
# S101: assert is used heavily in tests.
# B008: Typer relies on function-call defaults (typer.Option/typer.Argument)
#       to declare CLI parameters; this is the idiomatic, intended pattern.
# E501: the remaining long lines are unsplittable strings (SQL fragments,
#       f-string messages, CLI help text, docstring examples). `ruff format`
#       handles code line length and intentionally does not reflow strings,
#       matching the previous black behaviour; enforcing E501 here would only
#       force risky manual edits to those strings.
ignore = ["S101", "B008", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "N"]

[tool.pytest.ini_options]
markers = [
    "integration: requires a running Redshift-compatible database (skipped by default)",
]

[tool.mypy]
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
