[project]
name = "redtape-py"
version = "0.4.2"
description = "A permission management tool for AWS Redshift."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6.0",
    "rich>=13.7",
    "psycopg2-binary>=2.9.3",
    "typer>=0.9",
    "attrs>=23.2",
    "cattrs>=23.2",
    "environ-config>=23.2",
    "aenum>=3.1",
]

[project.scripts]
redtape = "redtape.cli:main"

# Exposed as a pip "extra" so `pip install -e ".[dev]"` works (used by ralph
# inside Docker). Mirrored by the [dependency-groups] table below, which is
# what `uv sync --group dev` reads.
[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.6",
    "vulture>=2.11",
]

[dependency-groups]
dev = [
    "pytest>=8.1",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.6",
    "vulture>=2.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["redtape"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "N", "UP", "S", "SIM", "RUF"]
# S101: assert is used heavily in tests.
# B008: Typer relies on function-call defaults (typer.Option/typer.Argument)
#       to declare CLI parameters; this is the idiomatic, intended pattern.
# E501: the remaining long lines are unsplittable strings (SQL fragments,
#       f-string messages, CLI help text, docstring examples). `ruff format`
#       handles code line length and intentionally does not reflow strings,
#       matching the previous black behaviour; enforcing E501 here would only
#       force risky manual edits to those strings.
ignore = ["S101", "B008", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "N"]

[tool.pytest.ini_options]
markers = [
    "integration: requires a running Redshift-compatible database (skipped by default)",
]

[tool.mypy]
python_version = "3.10"
# Note: attrs support (`@attrs.define`) is built into mypy's default plugin,
# so it does not need to be listed under `plugins` (the `mypy.plugins.attrs`
# module has no `plugin` entry point and cannot be loaded explicitly).
strict = true
ignore_missing_imports = true
# `strict = true` surfaces a large backlog of pre-existing type debt across the
# CLI and admin business logic. To land a clean, behaviour-preserving change we
# keep strict ON (so no_implicit_optional, warn_unused_ignores,
# warn_redundant_casts, strict_equality, no_implicit_reexport, etc. are all
# enforced going forward) but defer the following high-volume error classes,
# which require genuine logic/annotation work rather than mechanical fixes:
#   - no-untyped-def / no-untyped-call: ~99 unannotated functions/calls.
#   - union-attr / index / operator / arg-type / assignment / return-value:
#     fallout from model fields typed as Optional[list[...]] that are accessed
#     without narrowing; fixing safely needs a logic review of admin.py.
#   - attr-defined: dynamically attached methods (to_yaml/from_yaml/etc. added
#     via add_method) that mypy cannot see statically.
#   - var-annotated / type-arg / no-any-return / call-arg / untyped-decorator /
#     name-defined / misc: remaining mixed pre-existing debt.
# Each of these should be re-enabled and burned down incrementally in follow-up
# work; see issue #43 discussion.
disable_error_code = [
    "no-untyped-def",
    "no-untyped-call",
    "union-attr",
    "index",
    "operator",
    "arg-type",
    "assignment",
    "return-value",
    "attr-defined",
    "var-annotated",
    "type-arg",
    "no-any-return",
    "call-arg",
    "untyped-decorator",
    "name-defined",
    "misc",
]
